CmdError.txt
SourceCode.cpp:1:1: error: expected unqualified-id before '<' token
 <?xml version="1.0" encoding="UTF-8"?>
 ^
